# backend-practice

./: .gitignore
fastapi/: .env.exmaple  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
fastapi/app/: config.py  database.py  dependencies.py  main.py  monitoring.py  rate_limiting.py  redis_client.py
fastapi/app/api/v1/: router.py
fastapi/app/api/v1/endpoints/: admin.py  auth.py  users.py
fastapi/app/controllers/: base.py  user.py
fastapi/app/core/: middleware.py  security.py
fastapi/app/schemas/: auth.py  item.py  user.py
fastapi/prisma/: schema.prisma  seed.py
fastapi/tests/: conftest.py  test_api_versioning.py  test_data_validation.py  test_edge_cases.py  test_error_handling.py  test_middleware.py  test_performance.py  test_rate_limiting.py  test_users.py
kong-workshop/: docker-compose.yml
